<resources>
    <string name="app_name">Coffee Order</string>
    <string name="submit_order">PLACE YOUR ORDER</string>
    <string name="edit_field">Your name,Please!</string>
    <string name="_prefer">PREFERENCE</string>
    <string name="_whipcream">Whip cream</string>
    <string name="_chocolate">Chocolate</string>
    <string name="ask_the_quantity">How many cups of coffee would you want?</string>
    <string name="number_of_cups">1</string>
    <string name="order_summary">Order Summary</string>
    <string name="order_summay_text">Order your first Coffee and Immerse yourself in its splendid aroma</string>
</resources>
